[package]
name = "sniffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = { version = "0.15.7", features = ["bluetoothd"] }
tokio = { version = "1", features = ["rt"] }
log = "0.4.0"
env_logger = "0.9.0"
futures = "0.3"
